@@ -1,1 +1,1 @@
-rm -f hlvm aout.* aoutopt.* *.annot *.cm* *.o *~ aout aoutopt libruntime.so docs/*
+rm -f hlvm aout.* aoutopt.* *.annot *.cm* *.o *~ aout aoutopt aoutprof toplevel libruntime.so docs/* gmon.out
